<resources>
    <string name="app_name">Android Preferences</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="android_preferences">Android Preferences</string>
    <string name="settings">Settings</string>
    <string name="use_the_setting_icon_to_navigate_to_the_preferences"><![CDATA[-> Use the setting icon to navigate to the preferences]]></string>
    <string name="my_setting">My setting</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
</resources>